--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.syakeapps</groupId>
         <artifactId>sprandoom-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
         <relativePath>../sprandoom-parent/pom.xml</relativePath>
     </parent>
 
